fix: improve spacing for skills

--- a/packages/client/src/application/application-skills.scss
+++ b/packages/client/src/application/application-skills.scss
@@ -9,6 +9,8 @@
     &__skills {
         list-style-type: none;  
         padding: 0;
+        margin: 0;
+        margin-bottom: 1em;
     }
 }
 
@@ -21,7 +23,7 @@
         }
 
         em {
-            font-size: 0.9em;
+            font-size: 0.8em;
             color: $color-label;
         }
     }
